# ML

./: README.md
CNN/: cnn_test_googlecolab.ipynb  small_cnn.py
CNNvsTransformer/: pyproject.toml
CNNvsTransformer/projekt1/: base_cnn.ipynb  batch_cnn.ipynb  cnn_utils.py  transformer_code.ipynb  transformer_code.py  transformer_training.ipynb  transformer_utils.py
CNNvsTransformer/projekt1/data_tuning/: data_prep.ipynb  data_utils.py  instrukcja.txt  transformations.py
MCTS and Alfa-beta prunning/: 2048.py  2048_bot.py  Expectimax2048.py  MCTS2048.py  README.md  bot_stats.py  colors.py  game_functions.py
